--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "~0.54.1",
     "react-native-elements": "^0.19.1",
     "react-navigation": "^1.5.11",
-    "socket.io-client": "^2.1.0"
+    "socket.io-client": "^2.1.0",
+    "styled-components": "^3.2.6"
   }
 }
