--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "16.3.0",
     "react-native": "~0.54.1",
     "react-native-elements": "^0.19.1",
+    "react-native-immediate-phone-call": "^1.0.0",
+    "react-native-phone-call": "^1.0.4",
     "react-navigation": "^1.5.11",
     "socket.io-client": "^2.1.0",
     "styled-components": "^3.2.6"
