--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "axios": "^0.18.0",
     "react": "16.3.0",
     "react-native": "~0.54.1",
+    "react-native-camera": "^1.1.4",
     "react-native-elements": "^0.19.1",
     "react-native-immediate-phone-call": "^1.0.0",
     "react-native-phone-call": "^1.0.4",
+    "react-native-qrcode-scanner": "^1.0.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.11",
     "socket.io-client": "^2.1.0",
