--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "Fedex-deliverer",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "babel-preset-react-native": "^4.0.0",
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest": "^22.4.3",
-    "jest-react-native": "^18.0.0",
-    "react-test-renderer": "16.3.0-alpha.1"
-  },
-  "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "test": "jest"
-  },
-  "jest": {
-    "preset": "react-native"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "react": "16.3.0",
-    "react-native": "~0.54.1",
-    "react-native-camera": "^1.1.4",
-    "react-native-elements": "^0.19.1",
-    "react-native-immediate-phone-call": "^1.0.0",
-    "react-native-phone-call": "^1.0.4",
-    "react-native-qrcode-scanner": "^1.0.1",
-    "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^1.5.11",
-    "socket.io-client": "^2.1.0",
-    "styled-components": "^3.2.6"
-  }
+    "name": "Fedex-deliverer",
+    "version": "0.1.0",
+    "private": true,
+    "devDependencies": {
+        "babel-preset-react-native": "^4.0.0",
+        "babel-preset-react-native-stage-0": "^1.0.1",
+        "jest": "^22.4.3",
+        "jest-react-native": "^18.0.0",
+        "react-test-renderer": "16.3.0-alpha.1"
+    },
+    "scripts": {
+        "start": "react-native start --port 9988",
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "test": "jest"
+    },
+    "jest": {
+        "preset": "react-native"
+    },
+    "dependencies": {
+        "axios": "^0.18.0",
+        "react": "16.3.0",
+        "react-native": "~0.54.1",
+        "react-native-camera": "^1.1.4",
+        "react-native-elements": "^0.19.1",
+        "react-native-immediate-phone-call": "^1.0.0",
+        "react-native-phone-call": "^1.0.4",
+        "react-native-qrcode-scanner": "^1.0.1",
+        "react-native-vector-icons": "^4.6.0",
+        "react-navigation": "^1.5.11",
+        "socket.io-client": "^2.1.0",
+        "styled-components": "^3.2.6"
+    }
 }
