--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "node-fetch": "^2.1.2",
         "react": "16.3.0",
         "react-native": "~0.54.1",
         "react-native-camera": "^1.1.4",
